--- a/buddy.yml
+++ b/buddy.yml
@@ -18,7 +18,7 @@
   actions:
   - action: "Build & Deploy Docker image"
     type: "DOCKERFILE"
-    login: "btsuhako"
+    login: "gbird3"
     password: "${docker-password}"
     docker_image_tag: "latest"
     dockerfile_path: "Dockerfile"
